--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -17,3 +17,5 @@
 
 @import "~tinymce/skins/lightgray/skin.min.css";
 @import "~tinymce/skins/lightgray/content.min.css";
+
+@import "~air-datepicker/dist/css/datepicker.min.css";
