--- a/public/css/index.css
+++ b/public/css/index.css
@@ -21,7 +21,7 @@ a:hover {
 html,
 body {
     height: 100%;
-    background-color: rgba(51, 51, 51, .6);
+    background-color: rgba(52, 58, 64, .8) !important;
 }
 
 .background-image {
@@ -30,15 +30,9 @@ body {
     right: 0;
     bottom: 0;
     top: 0;
-
     z-index: -1;
-
-    background-image: url(https://img5.lalafo.com/i/posters/original/87/94/03481a7fbe0e0708b136d01d8265.jpeg);
     background-size: cover;
-
     -webkit-filter: blur(5px);
-    -moz-filter: blur(5px);
-    -o-filter: blur(5px);
     -ms-filter: blur(5px);
     filter: blur(5px);
 }
@@ -51,12 +45,8 @@ body {
     -webkit-box-pack: center;
     justify-content: center;
     color: #fff;
-    text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-    box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
-}
-
-.cover-container {
-    max-width: 42em;
+    text-shadow: 0 .05rem .1rem rgba(52, 58, 64, .8) !important;
+    box-shadow: inset 0 0 5rem rgba(52, 58, 64, .8) !important;
 }
 
 /*
