--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,17 +1,17 @@
 a,
 a:focus,
 a:hover {
-    color: #fff;
+  color: #fff;
 }
 
 /* Custom default button */
 .btn-secondary,
 .btn-secondary:hover,
 .btn-secondary:focus {
-    color: #333;
-    text-shadow: none; /* Prevent inheritance from `body` */
-    background-color: #fff;
-    border: .05rem solid #fff;
+  color: #333;
+  text-shadow: none; /* Prevent inheritance from `body` */
+  background-color: #fff;
+  border: 0.05rem solid #fff;
 }
 
 /*
@@ -20,93 +20,103 @@ a:hover {
 
 html,
 body {
-    height: 100%;
-    background-color: rgba(52, 58, 64, .8) !important;
+  height: 100%;
+  background-color: rgba(52, 58, 64, 0.8) !important;
 }
 
 .background-image {
-    position: fixed;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    top: 0;
-    z-index: -1;
-    background-size: cover;
-    -webkit-filter: blur(5px);
-    -ms-filter: blur(5px);
-    filter: blur(5px);
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  z-index: -1;
+  background-size: cover;
+  -webkit-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
 }
 
 body {
-    display: -ms-flexbox;
-    display: -webkit-box;
-    display: flex;
-    -ms-flex-pack: center;
-    -webkit-box-pack: center;
-    justify-content: center;
-    color: #fff;
-    text-shadow: 0 .05rem .1rem rgba(52, 58, 64, .8) !important;
-    box-shadow: inset 0 0 5rem rgba(52, 58, 64, .8) !important;
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: flex;
+  -ms-flex-pack: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  color: #fff;
+  text-shadow: 0 0.05rem 0.1rem rgba(52, 58, 64, 0.8) !important;
+  box-shadow: inset 0 0 5rem rgba(52, 58, 64, 0.8) !important;
 }
 
 /*
  * Header
  */
 .masthead {
-    margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
 .masthead-brand {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .nav-masthead .nav-link {
-    padding: .25rem 0;
-    font-weight: 700;
-    color: rgba(255, 255, 255, .5);
-    background-color: transparent;
-    border-bottom: .25rem solid transparent;
+  padding: 0.25rem 0;
+  font-weight: 700;
+  color: rgba(255, 255, 255, 0.5);
+  background-color: transparent;
+  border-bottom: 0.25rem solid transparent;
 }
 
 .nav-masthead .nav-link:hover,
 .nav-masthead .nav-link:focus {
-    border-bottom-color: rgba(255, 255, 255, .25);
+  border-bottom-color: rgba(255, 255, 255, 0.25);
 }
 
 .nav-masthead .nav-link + .nav-link {
-    margin-left: 1rem;
+  margin-left: 1rem;
 }
 
 .nav-masthead .active {
-    color: #fff;
-    border-bottom-color: #fff;
+  color: #fff;
+  border-bottom-color: #fff;
 }
 
 @media (min-width: 48em) {
-    .masthead-brand {
-        float: left;
-    }
+  .masthead-brand {
+    float: left;
+  }
 
-    .nav-masthead {
-        float: right;
-    }
+  .nav-masthead {
+    float: right;
+  }
 }
 
 /*
  * Cover
  */
 .cover {
-    padding: 0 1.5rem;
+  padding: 0 1.5rem;
 }
 
 .cover .btn-lg {
-    padding: .75rem 1.25rem;
-    font-weight: 700;
+  padding: 0.75rem 1.25rem;
+  font-weight: 700;
 }
 
 /*
  * Footer
  */
 .mastfoot {
-    color: rgba(255, 255, 255, .5);
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.mastfoot .inner {
+  display: flex;
+  justify-content: space-between;
+}
+
+.mastfoot .inner > p {
+  display: flex;
+  flex-direction: column;
 }
